Apply The Css to headings. and change the font .

--- a/personalDetails.html
+++ b/personalDetails.html
@@ -5,21 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Details</title>
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-</head>
-<body>
-    <h2>Profile Photo</h2>
 
-    <img src="assets/developer (1).png" width="100" height="100" alt="">
-    <p><b>Name : </b>Varun Shisode <br>
+    
+   
+   
+</head>
+<body class="all">
+    <h2 class="details">Profile Photo</h2>
+
+    <img src="assets/developer (1).png" width="100" height="100" id="img" alt="">
+    <p class="abc"><b>Name : </b>Varun Shisode <br>
     <b>Mobile No : </b>7249746225 <br>
     <b>Email : </b>Varunshisode@gmail.com <br>
     <b>DoB : </b>Aug-14-2001 <br>
     <b>Address : </b>Waman Nagar , Amalner <br>
     </p>
 
-    <h2>Family Details</h2>
+    <h2 class="details">Family Details</h2>
 
     <details>
+        <summary id="click">Click Here To See Family Details</summary>
 <p><b>Father's Name : </b> Pankaj Shisode <br>
 <b>Mother's Name :</b> Archana Shisode
 </p>
