Remove the nbsp and svg links and apply padding and margin for list and table

--- a/other.html
+++ b/other.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hobbies</title>
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+
+    <style>
+      details{
+        margin: 10px;
+        padding: 10px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+      }
+      li{
+        margin: 10px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+      }
+    </style>
   </head>
   <body>
     <details>
