--- a/personalDetails.html
+++ b/personalDetails.html
@@ -6,8 +6,15 @@
     <title>Personal Details</title>
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 
-    
-   
+    <style>
+        p{
+            margin: 10px;
+        }
+    </style>
+
+
+
+   </style>
    
 </head>
 <body class="all">
@@ -24,7 +31,7 @@
     <h2 class="details">Family Details</h2>
 
     <details>
-        <summary id="click">Click Here To See Family Details</summary>
+        <summary>Click Here To See Family Details</summary>
 <p><b>Father's Name : </b> Pankaj Shisode <br>
 <b>Mother's Name :</b> Archana Shisode
 </p>
