Apply Google Font Family like Roboto and Poppins

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@ color: chocolate;
 #Skills{
   color: blueviolet;
 }
-
+tr,th ,td, table{
+  border: 2px solid red;
+  padding: 5px;
+}
 
 
 
@@ -160,7 +163,7 @@ color: chocolate;
     <section id="techstack">
       <h2 class="Heading"> Technology Stack is</h2>
       
-      <table border="4">
+      <table >
         <thead>
           <th>Sr.no</th>
           <th>Technology Stack</th>
@@ -223,7 +226,7 @@ color: chocolate;
     <hr />
     <section id="education">
       <h2>Education</h2>
-      <table border="3">
+      <table >
 
 
 
