--- a/boxModel.html
+++ b/boxModel.html
@@ -1,54 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Section</title>
-    <style>
-  p{
-    border: 5px solid cadetblue;
-  }
-  #abc{
-    padding: 30px;
-    box-sizing: content-box;
-    width: 200px;
-
-  }
-  #efg{
-    padding: 30px;
-    box-sizing: border-box;
-    width: 200px;
-
-  }
- #para1{
-font-size: 30px;
- }
- #para2{
-font-size: 30px;
- }
- #one{
-font-size:1em;
- }
- #two{
-font-size:1rem;
- }
-  
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>box Sizing</title>
 </head>
-<body>
+<style>
+p{
+  border: 5px orange solid;
+}
+#para1{
 
-    <p id="abc">Project Section </p>
-    <p id="efg">Project Section</p>
-   <div id="para1">
-    <p id="one">
-        Varun Shisode.
-    </p>
-   </div>
-   <div id="para2">
-    <p id="two">
-        Pranav Shisode.
-    </p>
-   </div>
-    
+padding: 5px;
+box-sizing: content-box;
+width: 300px;
+font-size: 1em;
+}
+#para2{
+  padding: 5px;
+box-sizing: border-box;
+width: 300px;
+font-size: 1rem;
+}
+
+#abc{
+font-size: 50px;
+}
+#efg{
+font-size: 50px;
+}
+</style>
+<body>
+  <div id="abc">
+  <p id="para1">Varun</p></div>
+  <div id="efg">
+    <p id="para2">Pranav</p></div>
+
+  
 </body>
 </html>
