My Dp Assignment

--- a/myDp.html
+++ b/myDp.html
@@ -12,11 +12,15 @@
         margin: 20px auto;
         border-radius: 20px;
         background-color: rgb(153, 161, 161)
-     }
+        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)
+       -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)
+       -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)
+    
+    }
 
      .main img{
         padding-left: 120px;
-     }
+     }  
      .main h2{
         text-align: center;
         font-size: 30px;
